--- a/src/app/admin/views/exemplo_lista.phtml
+++ b/src/app/admin/views/exemplo_lista.phtml
@@ -71,8 +71,8 @@
             </thead>
             <tbody class="no-border-y">
               <tr>
-                <td><input class="excluir" type="checkbox" name="delete[]" id="del_usuario_ca002c2c5a246ee4c00e249274300e04"></td>
-                <td><input class="setAtivo" type="checkbox" checked="checked" id="ca002c2c5a246ee4c00e249274300e04"></td>
+                <td><input class="delete" type="checkbox" name="delete[]" id="del_usuario_ca002c2c5a246ee4c00e249274300e04"></td>
+                <td><input class="setActive" type="checkbox" checked="checked" id="ca002c2c5a246ee4c00e249274300e04"></td>
                 <td>Jair</td>
                 <td>junior@dindigital.com</td>
                 <td>343.609.248-79</td>
@@ -90,8 +90,8 @@
                 </td>
               </tr>
               <tr>
-                <td><input class="excluir" type="checkbox" name="delete[]" id="del_usuario_682cd390cd2547c1884dbe3fb2fea8bb"></td>
-                <td><input class="setAtivo" type="checkbox" checked="checked" id="682cd390cd2547c1884dbe3fb2fea8bb"></td>
+                <td><input class="delete" type="checkbox" name="delete[]" id="del_usuario_682cd390cd2547c1884dbe3fb2fea8bb"></td>
+                <td><input class="setActive" type="checkbox" checked="checked" id="682cd390cd2547c1884dbe3fb2fea8bb"></td>
                 <td>mariana</td>
                 <td>mariana@dindigital.com</td>
                 <td>343.609.248-79</td>
@@ -109,8 +109,8 @@
                 </td>
               </tr>
               <tr>
-                <td><input class="excluir" type="checkbox" name="delete[]" id="del_usuario_5b472da4243fd1e8bc18904d5e1306b1"></td>
-                <td><input class="setAtivo" type="checkbox" checked="checked" id="5b472da4243fd1e8bc18904d5e1306b1"></td>
+                <td><input class="delete" type="checkbox" name="delete[]" id="del_usuario_5b472da4243fd1e8bc18904d5e1306b1"></td>
+                <td><input class="setActive" type="checkbox" checked="checked" id="5b472da4243fd1e8bc18904d5e1306b1"></td>
                 <td>mario</td>
                 <td>mariosmello@live.com</td>
                 <td>343.609.248-79</td>
@@ -125,8 +125,8 @@
                 </td>
               </tr>
               <tr>
-                <td><input class="excluir" type="checkbox" name="delete[]" id="del_usuario_8952313ded74037a8e953c15e05033f0"></td>
-                <td><input class="setAtivo" type="checkbox" checked="checked" id="8952313ded74037a8e953c15e05033f0"></td>
+                <td><input class="delete" type="checkbox" name="delete[]" id="del_usuario_8952313ded74037a8e953c15e05033f0"></td>
+                <td><input class="setActive" type="checkbox" checked="checked" id="8952313ded74037a8e953c15e05033f0"></td>
                 <td>Mário</td>
                 <td>mario@dindigital.com</td>
                 <td>343.609.248-79</td>
