--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -7,7 +7,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de Usuário</h3>
+        <h3>Cadastro de <?php echo $this->_data['entity']['secao']; ?></h3>
       </div>
       <div class="content">
 
