--- a/src/app/admin/views/noticia_lista.phtml
+++ b/src/app/admin/views/noticia_lista.phtml
@@ -42,8 +42,8 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_noticia_<?php echo $row['id_noticia']; ?>" /></td>
-                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
+                  <td><input class="delete" type="checkbox" name="delete[]" id="del_noticia_<?php echo $row['id_noticia']; ?>" /></td>
+                  <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
                   <td><?php echo $row['ordem']; ?></td>
                   <td><?php echo $row['data']; ?></td>
                   <td><?php echo $row['categoria']; ?></td>
