--- a/src/app/admin/views/video_lista.phtml
+++ b/src/app/admin/views/video_lista.phtml
@@ -37,8 +37,8 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_video']; ?>" /></td>
-                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_video']; ?>" /></td>
+                  <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_video']; ?>" /></td>
+                  <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_video']; ?>" /></td>
                   <td><?php echo $row['data']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
