Ajustando botões de lista

--- a/src/app/admin/views/noticia_lista.phtml
+++ b/src/app/admin/views/noticia_lista.phtml
@@ -49,7 +49,7 @@
                   <td><?php echo $row['categoria']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edit" href="<?php echo $row['id_noticia']; ?>">
+                    <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger delete_shortcut" href="#">
