--- a/src/app/admin/views/foto_lista.phtml
+++ b/src/app/admin/views/foto_lista.phtml
@@ -42,7 +42,7 @@
                   <td><?php echo $row['data']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edit" href="<?php echo $row['id_foto']; ?>/">
+                    <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger delete_shortcut" href="#">
