--- a/src/app/admin/views/newscat_lista.phtml
+++ b/src/app/admin/views/newscat_lista.phtml
@@ -47,7 +47,7 @@
                   <td><?php echo $row['title']; ?></td>
                   <td><?php echo $row['inc_date']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default" href="/admin/<?php echo $this->_data['entity']['tbl']; ?>/save/<?php echo $row[$this->_data['entity']['id']]; ?>/">
+                    <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger delete_shortcut" href="#">
