Ajustes de idioma em Log e NoticiaCat

--- a/src/app/admin/views/includes/submit.phtml
+++ b/src/app/admin/views/includes/submit.phtml
@@ -7,7 +7,7 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
-        <li><button type="submit" title="Salvar e voltar para lista" class="btn-link-submit submit_lista">Salvar e voltar para lista</button></li>
+        <li><button type="submit" title="Salvar e voltar para lista" class="btn-link-submit submit_list">Salvar e voltar para lista</button></li>
         <li><button type="submit" title="Salvar e abrir novo com os mesmos dados" class="btn-link-submit submit_previous">Salvar e abrir novo com os mesmos dados</button></li>
         <li class="divider"></li>
         <li><a href="#" title="Voltar para a lista" class="btn_list">Voltar para lista</a></li>
