--- a/src/app/admin/views/essential/log_view.phtml
+++ b/src/app/admin/views/essential/log_view.phtml
@@ -53,13 +53,13 @@
             </div>
           </div>
 
-          <?php if ( $data['table']['content'] ): ?>
+          <?php if ( $data['table']['cont'] ): ?>
 
             <div class="form-group">
               <label class="col-sm-3 control-label"><h2>Conteúdo</h2></label>
             </div>
 
-            <?php foreach ( $data['table']['conteudo'] as $key => $row ): ?>
+            <?php foreach ( $data['table']['cont'] as $key => $row ): ?>
               <?php if ( is_object($row) ): ?>
                 <div class="form-group">
                   <label class="col-sm-2 control-label"><?php echo $key; ?></label>
