--- a/src/app/admin/views/news_list.phtml
+++ b/src/app/admin/views/news_list.phtml
@@ -13,10 +13,10 @@
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['search']['title']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['id_noticia_cat']; ?>
+            <?php echo $data['search']['id_news_cat']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -42,12 +42,12 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="delete" type="checkbox" name="delete[]" id="del_noticia_<?php echo $row['id_noticia']; ?>" /></td>
-                  <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
-                  <td><?php echo $row['ordem']; ?></td>
-                  <td><?php echo $row['data']; ?></td>
-                  <td><?php echo $row['categoria']; ?></td>
-                  <td><?php echo $row['titulo']; ?></td>
+                  <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['tbl']; ?>_<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
+                  <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
+                  <td><?php echo $row['sequence']; ?></td>
+                  <td><?php echo $row['date']; ?></td>
+                  <td><?php echo $row['category']; ?></td>
+                  <td><?php echo $row['title']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
