--- a/src/app/admin/views/news_list.phtml
+++ b/src/app/admin/views/news_list.phtml
@@ -7,7 +7,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Lista de Notícias</h3>
+        <h3>Lista de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
 
       <div class="content">
