--- a/src/app/admin/views/video_list.phtml
+++ b/src/app/admin/views/video_list.phtml
@@ -7,13 +7,13 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Lista de <?php echo $this->_data['entity']['secao']; ?></h3>
+        <h3>Lista de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
 
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['search']['title']; ?>">
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -39,8 +39,8 @@
                 <tr>
                   <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_video']; ?>" /></td>
                   <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_video']; ?>" /></td>
-                  <td><?php echo $row['data']; ?></td>
-                  <td><?php echo $row['titulo']; ?></td>
+                  <td><?php echo $row['date']; ?></td>
+                  <td><?php echo $row['title']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
