--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -35,7 +35,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Descrição</label>
             <div class="col-sm-10">
-              <textarea name="head" class="form-control limit_text" rows="4" placeholder="Descrição" maxlength="150"><?php echo @$data['table']['head']; ?></textarea>
+              <textarea name="description" class="form-control limit_text" rows="4" placeholder="Descrição" maxlength="150"><?php echo @$data['table']['description']; ?></textarea>
               <div class="limit_info"></div>
             </div>
           </div>
