--- a/src/app/admin/views/pagecat_save.phtml
+++ b/src/app/admin/views/pagecat_save.phtml
@@ -7,7 +7,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de <?php echo $this->_data['entity']['secao']; ?></h3>
+        <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
       <div class="content">
 
@@ -27,21 +27,21 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="titulo" type="text" value="<?php echo @$data['table']['titulo']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['capa']; ?>
+              <?php echo @$data['table']['cover']; ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Conteúdo</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['conteudo']; ?>
+              <?php echo @$data['table']['content']; ?>
             </div>
           </div>
 
