--- a/src/app/admin/views/photo_save.phtml
+++ b/src/app/admin/views/photo_save.phtml
@@ -7,7 +7,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de Fotos</h3>
+        <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
       <div class="content">
 
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="titulo" type="text" value="<?php echo @$data['table']['titulo']; ?>" placeholder="Título" class="limit_text form-control" maxlength="60">
+              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="60">
               <div class="limit_info"></div>
             </div>
           </div>
@@ -35,15 +35,15 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
-              <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control dateMask">
+              <input name="date" type="text" value="<?php echo @$data['table']['date']; ?>" placeholder="Data" class="form-control dateMask">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Galeria</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['galeria_uploader'] ?>
-              <?php echo @$data['table']['galeria'] ?>
+              <?php echo @$data['table']['gallery_uploader'] ?>
+              <?php echo @$data['table']['gallery'] ?>
             </div>
           </div>
 
