--- a/src/app/admin/views/video_list.phtml
+++ b/src/app/admin/views/video_list.phtml
@@ -37,7 +37,7 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_video']; ?>" /></td>
+                  <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
                   <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_video']; ?>" /></td>
                   <td><?php echo $row['date']; ?></td>
                   <td><?php echo $row['title']; ?></td>
