--- a/src/app/admin/views/settings_save.phtml
+++ b/src/app/admin/views/settings_save.phtml
@@ -5,7 +5,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de Configuração</h3>
+        <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
       <div class="content">
 
@@ -20,56 +20,42 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título Home</label>
             <div class="col-sm-10">
-              <input name="title_home" type="text" value="<?php echo $data['table']['title_home']; ?>" placeholder="Título da home" class="form-control">
+              <input name="home_title" type="text" value="<?php echo $data['table']['home_title']; ?>" placeholder="Título da home" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description Home</label>
             <div class="col-sm-10">
-              <textarea name="description_home" class="form-control" rows="4" placeholder="Descrição da home"><?php echo $data['table']['description_home']; ?></textarea>
+              <textarea name="home_description" class="form-control" rows="4" placeholder="Descrição da home"><?php echo $data['table']['home_description']; ?></textarea>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords Home</label>
             <div class="col-sm-10">
-              <input name="keywords_home" class="tags" type="hidden" value="<?php echo $data['table']['keywords_home']; ?>" />
+              <input name="home_keywords" class="tags" type="hidden" value="<?php echo $data['table']['home_keywords']; ?>" />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título Internas</label>
             <div class="col-sm-10">
-              <input name="title_interna" type="text" value="<?php echo $data['table']['title_interna']; ?>" placeholder="Título das páginas internas" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título das páginas internas" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description Internas</label>
             <div class="col-sm-10">
-              <textarea name="description_interna" class="form-control" rows="4" placeholder="Descrição das páginas internas"><?php echo $data['table']['description_interna']; ?></textarea>
+              <textarea name="description" class="form-control" rows="4" placeholder="Descrição das páginas internas"><?php echo $data['table']['description']; ?></textarea>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords Interna</label>
             <div class="col-sm-10">
-              <input name="keywords_interna" class="tags" type="hidden" value="<?php echo $data['table']['keywords_interna']; ?>" />
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Título Home</label>
-            <div class="col-sm-10">
-              <input name="qtd_horas" type="text" value="<?php echo $data['table']['qtd_horas']; ?>" placeholder="Horas" class="form-control">
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">E-mail avisos</label>
-            <div class="col-sm-10">
-              <input name="email_avisos" type="text" value="<?php echo $data['table']['email_avisos']; ?>" placeholder="E-mail avisos" class="form-control">
+              <input name="keywords" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
             </div>
           </div>
 
