--- a/src/app/admin/views/page_list.phtml
+++ b/src/app/admin/views/page_list.phtml
@@ -7,16 +7,16 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Lista de <?php echo $this->_data['entity']['secao']; ?></h3>
+        <h3>Lista de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
 
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['search']['title']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['id_pagina_cat']; ?>
+            <?php echo $data['search']['id_page_cat']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -44,10 +44,10 @@
                 <tr>
                   <td><input class="delete" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
                   <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
-                  <td><?php echo $row['ordem']; ?></td>
+                  <td><?php echo $row['sequence']; ?></td>
                   <td><?php echo $row['menu']; ?></td>
-                  <td><?php echo $row['titulo']; ?></td>
-                  <td><?php echo $row['inc_data']; ?></td>
+                  <td><?php echo $row['title']; ?></td>
+                  <td><?php echo $row['inc_date']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
