--- a/src/app/admin/views/admin_list.phtml
+++ b/src/app/admin/views/admin_list.phtml
@@ -7,16 +7,16 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Lista de <?php echo $this->_data['entity']['secao']; ?></h3>
+        <h3>Lista de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
 
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="<?php echo $data['busca']['nome']; ?>">
+            <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="<?php echo $data['search']['name']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="email" type="text" placeholder="Busca por email" value="<?php echo $data['busca']['email']; ?>">
+            <input class="form-control" name="email" type="text" placeholder="Busca por email" value="<?php echo $data['search']['email']; ?>">
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -34,7 +34,6 @@
                 <th style="width:5%;"><strong>Ativo</strong></th>
                 <th style="width:15%;"><strong>Nome</strong></th>
                 <th style="width:15%;"><strong>E-mail</strong></th>
-                <th style="width:15%;"><strong>Data de Inclusão</strong></th>
                 <th style="width:15%;" class="text-center"><strong>Ações</strong></th>
               </tr>
             </thead>
@@ -43,11 +42,10 @@
                 <tr name="<?php echo $this->_data['entity']['name']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
                   <td><input class="delete" type="checkbox" name="delete[]" /></td>
                   <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> /></td>
-                  <td><?php echo $row['nome']; ?></td>
+                  <td><?php echo $row['name']; ?></td>
                   <td><?php echo $row['email']; ?></td>
-                  <td><?php echo $row['inc_data']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
+                    <a class="label label-default btn_edit" href="#">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger delete_shortcut" href="#">
