--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -7,11 +7,11 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de <?php echo $this->_data['entity']['secao']; ?></h3>
+        <h3>Cadastro de <?php echo $this->_data['entity']['section']; ?></h3>
       </div>
       <div class="content">
 
-        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;">
+        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;" autocomplete="off">
 
           <input type="hidden" name="redirect" value="save" />
 
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="nome" type="text" value="<?php echo @$data['table']['nome']; ?>" placeholder="Seu nome" class="form-control">
+              <input name="name" type="text" value="<?php echo @$data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
             </div>
           </div>
 
@@ -41,7 +41,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Senha</label>
             <div class="col-sm-10">
-              <input name="senha" class="form-control" type="password" value="" />
+              <input name="password" class="form-control" type="password" value="" />
             </div>
           </div>
 
@@ -53,23 +53,9 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Avatar 2</label>
-            <div class="col-sm-10">
-              <?php echo @$data['table']['avatar2'] ?>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Avatar 3</label>
-            <div class="col-sm-10">
-              <?php echo @$data['table']['avatar3'] ?>
-            </div>
-          </div>
-
-          <div class="form-group">
             <label class="col-sm-2 control-label">Permissões</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['permissao'] ?>
+              <?php echo @$data['table']['permission'] ?>
             </div>
           </div>
 
