--- a/src/app/admin/views/essential/log_list.phtml
+++ b/src/app/admin/views/essential/log_list.phtml
@@ -44,7 +44,7 @@
             </thead>
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
-                <tr name="Log" id="<?php echo $row['id_log']; ?>">
+                <tr name="<?php echo $this->_data['entity']['name']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
                   <td><?php echo $row['inc_date']; ?></td>
                   <td><?php echo $row['admin']; ?></td>
                   <td><?php echo $row['action']; ?></td>
