--- a/src/app/admin/views/essential/trash_list.phtml
+++ b/src/app/admin/views/essential/trash_list.phtml
@@ -13,10 +13,10 @@
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="title" type="text" placeholder="Busca por título" value="<?php echo $data['busca']['title']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por título" value="<?php echo $data['search']['title']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['section']; ?>
+            <?php echo $data['search']['section']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -44,8 +44,8 @@
             </thead>
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
-                <tr>
-                  <td><input class="delete" type="checkbox" name="delete[]" id="<?php echo $row['name']; ?>_<?php echo $row['id']; ?>" /></td>
+                <tr name="<?php echo $this->_data['entity']['name']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
+                  <td><input class="delete" type="checkbox" name="delete[]" /></td>
                   <td><?php echo $row['del_date']; ?></td>
                   <td><?php echo $row['title']; ?></td>
                   <td><?php echo $row['section']; ?></td>
@@ -54,30 +54,7 @@
             </tbody>
           </table>
 
-          <?php if ( !count($data['list']) ): ?>
-            <div class="header">
-              <h4>Sua precisa não encontrou resultados</h4>
-            </div>
-          <?php else: ?>
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="pull-left">
-                  <div class="dataTables_info" id="datatable_info">
-                    Exibindo <?php echo $data['paginator']['subtotal']; ?> de <?php echo $data['paginator']['total']; ?> resultados
-                  </div>
-                </div>
-                <div class="pull-right">
-                  <div class="dataTables_paginate paging_bs_normal">
-                    <ul class="pagination">
-                      <?php echo $data['paginator']['numbers']; ?>
-                    </ul>
-                  </div>
-                </div>
-                <div class="clearfix">
-                </div>
-              </div>
-            </div>
-          <?php endif; ?>
+          {$PAGINACAO}
 
         </div>
       </div>
