--- a/src/app/admin/views/essential/trash_list.phtml
+++ b/src/app/admin/views/essential/trash_list.phtml
@@ -44,7 +44,7 @@
             </thead>
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
-                <tr name="<?php echo $this->_data['entity']['name']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
+                <tr name="<?php echo $row['name']; ?>" id="<?php echo $row['id']; ?>">
                   <td><input class="delete" type="checkbox" name="delete[]" /></td>
                   <td><?php echo $row['del_date']; ?></td>
                   <td><?php echo $row['title']; ?></td>
