--- a/src/app/admin/views/pagecat_list.phtml
+++ b/src/app/admin/views/pagecat_list.phtml
@@ -13,7 +13,7 @@
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['title']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['search']['title']; ?>">
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
