na log view bugava se o conteudo era json, pq ele virava array...

--- a/src/app/admin/views/essential/log_view.phtml
+++ b/src/app/admin/views/essential/log_view.phtml
@@ -68,7 +68,7 @@
                     <div><?php echo $row->after; ?></div>
                   </div>
                 </div>
-              <?php else: ?>
+              <?php elseif ( is_string($row) ): ?>
                 <div class="form-group">
                   <label class="col-sm-2 control-label"><?php echo $key; ?></label>
                   <div class="col-sm-10">
