--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -20,21 +20,21 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
+              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="name" type="text" value="<?php echo @$data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
+              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">E-mail</label>
             <div class="col-sm-10">
-              <input name="email" type="text" value="<?php echo @$data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="form-control">
+              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="form-control">
             </div>
           </div>
 
@@ -48,14 +48,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Avatar</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['avatar'] ?>
+              <?php echo $data['table']['avatar'] ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Permissões</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['permission'] ?>
+              <?php echo $data['table']['permission'] ?>
             </div>
           </div>
 
