--- a/src/app/admin/views/newscat_save.phtml
+++ b/src/app/admin/views/newscat_save.phtml
@@ -20,28 +20,28 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label" for="home">Home</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="is_home" id="is_home" <?php if ( @$data['table']['is_home'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="is_home" id="is_home" <?php if ( $data['table']['is_home'] == '1' ): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['cover']; ?>
+              <?php echo $data['table']['cover']; ?>
             </div>
           </div>
 
