--- a/src/app/admin/views/page_save.phtml
+++ b/src/app/admin/views/page_save.phtml
@@ -20,19 +20,19 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Menu</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['id_page_cat']; ?>
+              <?php echo $data['table']['id_page_cat']; ?>
             </div>
           </div>
 
-          <?php if ( @$data['table']['infinite'] ): ?>
-            <?php foreach ( $data['table']['infinite'] as $x => $dropdown ): ?>
+          <?php if ( $data['table']['id_parent'] ): ?>
+            <?php foreach ( $data['table']['id_parent'] as $x => $dropdown ): ?>
               <div class="form-group drop_infinity_line<?php echo ($x > 0) ? ' other' : ''; ?>">
                 <label class="col-sm-2 control-label">Página</label>
                 <div class="col-sm-10 drop_infinity_container">
@@ -51,35 +51,35 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['cover']; ?>
+              <?php echo $data['table']['cover']; ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Conteúdo</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['content']; ?>
+              <?php echo $data['table']['content']; ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-              <textarea name="description" class="form-control" rows="4" placeholder="Descrição da página"><?php echo @$data['table']['description']; ?></textarea>
+              <textarea name="description" class="form-control" rows="4" placeholder="Descrição da página"><?php echo $data['table']['description']; ?></textarea>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords</label>
             <div class="col-sm-10">
-              <input name="keywords" class="tags" type="hidden" value="<?php echo @$data['table']['keywords']; ?>" />
+              <input name="keywords" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
             </div>
           </div>
 
