--- a/src/app/admin/views/pagecat_save.phtml
+++ b/src/app/admin/views/pagecat_save.phtml
@@ -20,42 +20,42 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['cover']; ?>
+              <?php echo $data['table']['cover']; ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Conteúdo</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['content']; ?>
+              <?php echo $data['table']['content']; ?>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-              <textarea name="description" class="form-control" rows="4" placeholder="Descrição da página"><?php echo @$data['table']['description']; ?></textarea>
+              <textarea name="description" class="form-control" rows="4" placeholder="Descrição da página"><?php echo $data['table']['description']; ?></textarea>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords</label>
             <div class="col-sm-10">
-              <input name="keywords" class="tags" type="hidden" value="<?php echo @$data['table']['keywords']; ?>" />
+              <input name="keywords" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
             </div>
           </div>
 
