--- a/src/app/admin/views/photo_save.phtml
+++ b/src/app/admin/views/photo_save.phtml
@@ -20,14 +20,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
+              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="60">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="60">
               <div class="limit_info"></div>
             </div>
           </div>
@@ -35,15 +35,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
-              <input name="date" type="text" value="<?php echo @$data['table']['date']; ?>" placeholder="Data" class="form-control dateMask">
+              <input name="date" type="text" value="<?php echo $data['table']['date']; ?>" placeholder="Data" class="form-control dateMask">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Galeria</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['gallery_uploader'] ?>
-              <?php echo @$data['table']['gallery'] ?>
+              <?php echo $data['table']['gallery'] ?>
             </div>
           </div>
 
