--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -20,14 +20,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
+              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo @$data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="255">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="255">
               <div class="limit_info"></div>
             </div>
           </div>
@@ -35,7 +35,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Descrição</label>
             <div class="col-sm-10">
-              <textarea name="description" class="form-control limit_text" rows="4" placeholder="Descrição" maxlength="150"><?php echo @$data['table']['description']; ?></textarea>
+              <textarea name="description" class="form-control limit_text" rows="4" placeholder="Descrição" maxlength="150"><?php echo $data['table']['description']; ?></textarea>
               <div class="limit_info"></div>
             </div>
           </div>
@@ -43,21 +43,21 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
-              <input name="date" type="text" value="<?php echo @$data['table']['date']; ?>" placeholder="Data" class="form-control dateMask">
+              <input name="date" type="text" value="<?php echo $data['table']['date']; ?>" placeholder="Data" class="form-control dateMask">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Link YouTube</label>
             <div class="col-sm-10">
-              <input name="link_youtube" type="text" value="<?php echo @$data['table']['link_youtube']; ?>" placeholder="Link do YouTube" class="youtube_link form-control">
+              <input name="link_youtube" type="text" value="<?php echo $data['table']['link_youtube']; ?>" placeholder="Link do YouTube" class="youtube_link form-control">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Link Vimeo</label>
             <div class="col-sm-10">
-              <input name="link_vimeo" type="text" value="<?php echo @$data['table']['link_vimeo']; ?>" placeholder="Link do Vimeo" class="vimeo_link form-control" >
+              <input name="link_vimeo" type="text" value="<?php echo $data['table']['link_vimeo']; ?>" placeholder="Link do Vimeo" class="vimeo_link form-control" >
             </div>
           </div>
 
