Implementação de sistema de link em todas as páginas

--- a/src/app/admin/views/page_save.phtml
+++ b/src/app/admin/views/page_save.phtml
@@ -62,6 +62,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Conteúdo</label>
             <div class="col-sm-10">
