--- a/src/app/admin/views/news_save.phtml
+++ b/src/app/admin/views/news_save.phtml
@@ -66,6 +66,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Fotos Relacionadas</label>
             <div class="col-sm-10">
