--- a/src/app/admin/views/newscat_save.phtml
+++ b/src/app/admin/views/newscat_save.phtml
@@ -38,6 +38,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
