--- a/src/app/admin/views/photo_save.phtml
+++ b/src/app/admin/views/photo_save.phtml
@@ -39,6 +39,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Galeria</label>
             <div class="col-sm-10">
