Implementação de sistema de visualização de link quando conteúdo tem link

--- a/src/app/admin/views/admin_list.phtml
+++ b/src/app/admin/views/admin_list.phtml
@@ -23,7 +23,7 @@
         </form>
       </div>
 
-      {$BTN_LISTA_CAD-EXC}
+      {$LIST_HEADER_BTN}
 
       <div class="content">
         <div class="table-responsive">
@@ -57,7 +57,7 @@
             </tbody>
           </table>
 
-          {$PAGINACAO}
+          {$PAGINATION}
 
         </div>
       </div>
