--- a/src/app/admin/views/includes/uri.phtml
+++ b/src/app/admin/views/includes/uri.phtml
@@ -1,4 +1,4 @@
-<?php if ( !is_null($data['table']['uri']) ): ?>
+<?php if ( isset($data['table']['uri']) && !is_null($data['table']['uri']) ): ?>
   <div class="form-group">
     <label class="col-sm-2 control-label">Link</label>
     <div class="col-sm-10">
