--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -63,6 +63,13 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Relação Tags</label>
+            <div class="col-sm-10">
+              <input name="r_tags" id="tag" type="text" value="<?php echo @$data['table']['r_tags']; ?>" placeholder="Tags" class="tokenInput form-control" >
+            </div>
+          </div>
+
           {$SUBMIT}
 
         </form>
