--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -65,8 +65,8 @@
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Relação Tags</label>
-            <div class="col-sm-10">
-              <input name="r_tags" id="tag" type="text" value="<?php echo @$data['table']['r_tags']; ?>" placeholder="Tags" class="tokenInput form-control" >
+            <div class="col-sm-4">
+              <input name="tags" type="hidden" value="" style="width: 300px;" id="tag" class="select2-ajax"/>
             </div>
           </div>
 
