Sistema de pesquisa de satisfação (add/del)

--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -68,7 +68,7 @@
       <?php endif; ?>
       <?php if ( isset($data['permission']['Survey']) ): ?>
         <li>
-          <a href="/admin/survey/list/"><i class="fa fa-picture-o"></i>Enquete</a>
+          <a href="/admin/survey/list/"><i class="fa fa-picture-o"></i>Pesquisa de Satisfação</a>
         </li>
       <?php endif; ?>
       <?php if ( isset($data['permission']['Tag']) ): ?>
